<resources>
    <string name="app_name">My Application</string>
    <string name="product_actual_price_text">$500</string>
    <string name="product_offer_percent_text">15%</string>
    <string name="add_img_close_btn_desc">add to cart\n\n</string>
    <string name="search_placeholder_text">search</string>
    <string name="product_detail_image_desc">productDetailImageDesc\n</string>
    <string name="pro_details_select_size_lable_text">Set Size</string>
    <string name="pro_details_select_color_label_text">Set Color</string>
    <string name="pro_details_specif_label_text">Details</string>
    <string name="pro_details_add_to_cart_btn_text">Add To Cart\n</string>
    <string name="pro_brand_label_text">Brand</string>
    <string name="pro_category_label_text">Category</string>
    <string name="pro_stock_label_text">Stock</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="person">user</string>
</resources>